# discard

./: README.md
Chowder/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
Chowder/engine/: CMakeLists.txt  Chowder.h  macro.h
Chowder/engine/exception/: exception.h
Chowder/engine/gfx/include/: RawWindowHandle.h  gfx.h
Chowder/engine/gfx/src/: InitializeFilament.cpp
Chowder/engine/lib_windows_debug/: SDL2d.exp
Chowder/engine/scene/: Terrain.h
Chowder/learning/common/: model.cpp  model.h  program.cpp  program.h  textures2D.cpp  textures2D.h
Chowder/learning/triangle/: CMakeLists.txt  fs_triangle.psh  main.cpp  vs_triangle.vsh
Combed/: README.md
Hemsleya/: CMakeLists.txt  (+2 more)
abelkhan_cpp_hub/: .gitignore  CMakeLists.txt  README.md
abelkhan_cpp_hub/component/hub/: CMakeLists.txt  center_msg_handle.h  centerproxy.h  dbproxyproxy.h  direct_client_msg_handle.h  gatemanager.cpp  gatemanager.h  gc_poll.cpp  hub.cpp  hub.h
abelkhan_cpp_hub/config/: config.h
abelkhan_cpp_hub/service/: channel.h  connectservice.h  enetacceptservice.h  enetchannel.h  enetconnectservice.h  websocketacceptservice.h  websocketchannel.h
abelkhan_cpp_hub/tools/jsonparsepp/: JsonParse.h
abelkhan_cpp_hub/tools/jsonparsepp/json_test/: json_test.sln
abelkhan_cpp_hub/tools/jsonparsepp/json_test/json_test/: json_test.vcxproj  main.cpp
abelkhan_cpp_hub/tools/juggle/c++/: Imodule.h  process_.h
darkforce/: CMakeLists.txt  README.md
darkforce/common/: CMakeLists.txt
darkforce/common/acceptor/: CMakeLists.txt  acceptor.cpp  blackacceptor.h  writeacceptor.h
darkforce/common/achieve/: CMakeLists.txt  acceptor.cpp  achieve.h  channel.h  channelservice.cpp  channelservice.h
darkforce/common/config/: CMakeLists.txt  config.h  jsonconfig.cpp
darkforce/common/connector/: CMakeLists.txt  connector.cpp  connector.h
darkforce/common/fitle/: CMakeLists.txt  fitle.cpp  fitle.h
darkforce/common/log/: CMakeLists.txt  consolelog.cpp  filelog.cpp  log.h
darkforce/common/logicservice/: CMakeLists.txt  logicservice.cpp  logicservice.h
darkforce/common/mongoproxy/: CMakeLists.txt  mongoproxy.cpp  mongoproxy.h
darkforce/common/timer/: CMakeLists.txt  timerservice.cpp  timerservice.h
darkforce/doc/: Juggle说明文档.odt  fossilizid说明文档.odt
darkforce/endflower/: endflower.VC.opendb  endflower.sln
darkforce/endflower/endflower/: camera .h  camera.cpp  context.cpp  context.h  control.cpp  control.h  endflower.cpp  endflower.h  endflower.vcxproj  endflower.vcxproj.filters  glextARB.h  material.cpp  material.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  vertext.cpp  vertext.h  wnd.cpp  wnd.h
darkforce/endflower/endflower/Debug/endflower.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  endflower.lastbuildstate  lib.command.1.tlog
darkforce/endflower/endflower/glsl/: fragmentshader.glsl  vertexshader.glsl
darkforce/endflower/plugin/assimp/: res_load_assimp.h
darkforce/endflower/ui/: endflowerui.vcxproj  endflowerui.vcxproj.filters  uibutton.h
darkforce/endflower/ui/Debug/: vc140.idb
darkforce/endflower/ui/Debug/endflowerui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  endflowerui.lastbuildstate
darkforce/endfloweredit/: endfloweredit.vcxproj  fragmentshader.glsl  main.cpp  vertexshader.glsl
darkforce/fossilizid/: CMakeLists.txt
darkforce/fossilizid/context/: CMakeLists.txt
darkforce/fossilizid/pool/: factory.h
darkforce/fossilizid/uuid/: CMakeLists.txt  uuid.cpp  uuid.h
darkforce/framework/: CMakeLists.txt
darkforce/framework/center/: CMakeLists.txt  center.cpp  center.h
darkforce/framework/dbproxy/: CMakeLists.txt  dbproxy.cpp  dbproxy.h
darkforce/framework/gate/: CMakeLists.txt  gate.cpp  gate.h  rpcproxy.cpp  rpcproxy.h
darkforce/framework/jugglescript/: center.juggle  db.juggle  gate.juggle  logic.juggle  routing.juggle
darkforce/framework/jugglescript/cpp/caller/: centercaller.h  dbcaller.h  gatecaller.h  logiccaller.h  routingcaller.h
darkforce/framework/jugglescript/cpp/module/: centermodule.h  dbmodule.h  gatemodule.h  logicmodule.h  routingmodule.h
darkforce/framework/logic/: CMakeLists.txt  logic.cpp  logic.h
darkforce/framework/routing/: CMakeLists.txt  routing.cpp  routing.h
darkforce/jsonparse/cpp/: JsonParser.h
darkforce/jsonparse/csharp/: JsonParser.cs
darkforce/juggle/: CMakeLists.txt
darkforce/juggle/codegen/: argvs.py  codegencaller.py  codegenmodule.py  codegenstruct.py  gentools.py  jmake.py  notes.txt  statemachine.py
darkforce/juggle/cpp/: CMakeLists.txt
darkforce/juggle/cpp/interface/: juggle.h  mutex.h  process.h  rpcchannel.h  semaphore.h  service.h
darkforce/juggle/cpp/service/: caller.cpp  caller.h  globalhandle.h  module.cpp  module.h  mutex.cpp  process.cpp  semaphore.cpp  service.cpp  service.h
darkforce/python/: uuid.py
darkforce/remoteq/: CMakeLists.txt  endpoint.h  queue.h
darkforce/remoteq/ipv4/windows/: endpointimpl.cpp
darkforce/remoteq/windows/: queueimpl.cpp
darkforce/test/: CMakeLists.txt
darkforce/test/bincenter/: CMakeLists.txt  main.cpp
darkforce/test/bindb/: CMakeLists.txt  main.cpp
darkforce/test/bingate/: CMakeLists.txt  main.cpp
darkforce/test/binlogic/: CMakeLists.txt  main.cpp
reduce/disused/reduce/service/: CMakeLists.txt  acceptservice.cpp  acceptservice.h  connectservice.cpp  connectservice.h  locale_obj.cpp  locale_obj.h  mutex.cpp  mutex.h  obj.cpp  obj.h  protodescription.h  remote_obj.cpp  remote_obj.h  rpcsession.cpp  rpcsession.h  service.cpp  service.h  session.h  tempsession.cpp  tempsession.h  uuid.cpp  uuid.h
utopia/async_net/: CMakeLists.txt  async_service.cpp  async_service.h  buff_pool.cpp  buff_pool.h  error_code.h  read_buff_pool.cpp  read_buff_pool.h  sock_addr.cpp  sock_addr.h  sock_buff.cpp  sock_buff.h  socket.cpp  socket.h  socket_base.cpp  socket_base.h  socket_pool.cpp  socket_pool.h  write_buff_pool.cpp  write_buff_pool.h
utopia/async_net/windows/: Overlapped.cpp  Overlapped.h  async_service_windows.cpp  socket_base_windows.cpp  socket_base_windows.h  winhdef.h
(+1099 files in other folders)
