PROJECT(darkforce)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(juggle)
ADD_SUBDIRECTORY(remoteq)
ADD_SUBDIRECTORY(fossilizid)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(test)